fix the div oopsie, labels are aligned again

--- a/style.css
+++ b/style.css
@@ -88,11 +88,14 @@ section[role='tabpanel'] {
 }
 
 .waveform-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-top: 5pt;
   background-color: rgb(250,250,250);
+}
+
+.waveform-label-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .icon {
@@ -101,6 +104,7 @@ section[role='tabpanel'] {
 
 .label {
   text-align: right;
+  margin-right: 5pt;
 }
 
 .comparison-view {
